[project]
name = "computer-caffeinator"
version = "0.1.0"
description = "A simple Tkinter-based desktop app that simulates typing in a text entry box."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pyautogui>=0.9.54",
]

[dependency-groups]
dev = [
    "black>=25.9.0",
    "flake8>=7.3.0",
    "mypy>=1.18.2",
    "types-pyautogui>=0.9.3.20241230",
]
